go to 24h automatically from popular

--- a/views/viewPartials/popularUploadsNavbar.pug
+++ b/views/viewPartials/popularUploadsNavbar.pug
@@ -2,7 +2,7 @@ div.row
     if category == 'overview'
         div.col-sm-2
             h3.fw
-                a(href=`/media/popular/${page}?media=${mediaType}&category=all`) All Uploads
+                a(href=`/media/popular/${page}?media=${mediaType}&category=all&within=24hour`) All Uploads
     if category == 'all'
         div.col-sm-2
             h3.fw
