add rss link to footer

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -18,6 +18,8 @@ footer
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/nodetube" target="_blank") Reddit
 
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="/media/recent/rss" target="_blank") RSS
+
     a.pull-left(style="color:#aaa;margin-right:10px;" href="/termsofservice") Terms Of Service
 
 
