--- a/views/mediaPlayerPartials/subscribeFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/subscribeFunctionalityJs.pug
@@ -23,12 +23,15 @@ script.
       })
     }
 
-    var channelUrl = '#{upload.uploader.channelUrl}'
     var csrf = '#{_csrf}'
 
     // dont move browser
     e.preventDefault();
 
+
+    // TODO: these both have to be changed with proper values
+
+    var channelUrl = '#{upload.uploader.channelUrl}'
     var userName = "#{upload.uploader.channelName || upload.uploader.channelUrl}"
 
     var unsubbing = alreadySubbed
