--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -18,7 +18,7 @@ block content
       .form-group
         label.fw.loginHeader.col-sm-3.control-label(for='password') Password
         .col-sm-7
-          input.fw.logineader.form-control(type='password', name='password', id='password', placeholder='Please enter your password', required)
+          input.fw.loginHeader.form-control(type='password', name='password', id='password', placeholder='Please enter your password', required)
       .form-group
         label.fw.loginHeader.col-sm-3.control-label(for='confirmPassword') Confirm Password
         .col-sm-7
