--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -29,8 +29,8 @@ style.
         h5.brandName(style="color:white;margin-right:-10px;margin-top:0px;") #{brandName}
     .collapse.navbar-collapse
       ul.nav.navbar-nav.front-header
-        li(class=(title == 'Home') ? 'active' : undefined)
-          a(href=`/`) Home
+        li(class=undefined)
+          a(href=`https://reddit.com/r/virusoutbreak`) r/VirusOutbreak
           li(class=(title == 'Popular Uploads') ? 'active' : undefined)
             // category set to overview to trigger overview functionality by default
             if popularDefault == 'all'
