--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -200,9 +200,9 @@ block content
                 button.fw.btn.btn-primary.submit-button(style="border-radius:5px;font-size:18px;" type="submit") Upload
 
           div.upload-gif
-              h3.upload-title-name Your file is uploading
+              h3.fw.upload-title-name Your file is uploading
               br
-              h1(style="margin-bottom:19px;") Uploading...
+              h1.fw(style="margin-bottom:19px;") Uploading...
 
               div#myItem1.ldBar(data-preset="circle")
 
