--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -109,24 +109,24 @@ block content
       div.col-sm-2
         h3.fw
           a(href=`/user/${user.channelUrl}`) Channel Page
-      div.col-sm-2
-        h3.fw
-          a(href="/account/viewHistory") View History
-      div.col-sm-2
-        h3.fw
-          a(href="/account/reactHistory") React History
+      //div.col-sm-2
+      //  h3.fw
+      //    a(href="/account/viewHistory") View History
+      //div.col-sm-2
+      //  h3.fw
+      //    a(href="/account/reactHistory") React History
       //div.col-sm-2
       //      h4
       //        a(href="/" + `${user.channelUrl}` +  "/playlists") Playlists
-      div.col-sm-2
-        h3.fw
-          a(href="/account/livestreaming") Livestreaming
-          //a.livestream-button Livestreaming
-          //a.livestreaming-link(href=`/user/${user.channelUrl}/live/staging`) Livestreaming
-      div.col-sm-2
-        h3.fw Credit ($#{user.credit/100})
-      div.col-sm-2
-        h3.fw Earnings ($#{user.receivedCredit / 100})
+      //div.col-sm-2
+      //  h3.fw
+      //    a(href="/account/livestreaming") Livestreaming
+      //    //a.livestream-button Livestreaming
+      //    //a.livestreaming-link(href=`/user/${user.channelUrl}/live/staging`) Livestreaming
+      //div.col-sm-2
+      //  h3.fw Credit ($#{user.credit/100})
+      //div.col-sm-2
+      //  h3.fw Earnings ($#{user.receivedCredit / 100})
       //div.col-sm-2
       //  h3
       //    a(href=`/account/creditHistory`) Credit History
