touchup subscriptions page

--- a/views/account/subscriptions.pug
+++ b/views/account/subscriptions.pug
@@ -5,7 +5,7 @@ block content
     div.center-block.text-center.col-sm-12
 
 
-        h1 Subscriptions
+        h1.fw Subscriptions
 
         hr
 
@@ -27,7 +27,7 @@ block content
 
     hr
     if uploads.length == 0
-        h3.text-center Subscribe to a channel to see your subscriptions
+        h3.fw.text-center Subscribe to a channel to see your subscriptions
     else
         br
         br
