--- a/views/viewPartials/channelSubscribe.pug
+++ b/views/viewPartials/channelSubscribe.pug
@@ -1,42 +1,19 @@
 script.
-
-  // SUBSCRIBE FUNCTIONALITY
   var amountOfSubs = #{subscriberAmount}
   var alreadySubbed = #{alreadySubbed}
-  var mediaUniqueTag = '#{upload.uniqueTag}'
-
-  //  console.log(alreadySubbed + ' already subbed');
 
   $('.subscribe').on('touchstart click', function (e) {
 
-    // if user is not logged in
     if (!user) {
-      return swal({
-        text: "Please register to subscribe to content",
-        type: 'warning',
-        showCancelButton: true,
-        confirmButtonText: 'Sign Up Now'
-      }).then(function (result) {
-        if (result.value) {
-          window.location.href = "/signup";
-        }
-      })
+      return swal('Please register an account to subscribe')
     }
 
+    var channelUrl = '#{channel.channelUrl}'
     var csrf = '#{_csrf}'
 
     // dont move browser
     e.preventDefault();
 
-
-    // TODO: these both have to be changed with proper values
-
-    var channelUrl = '#{upload.uploader.channelUrl}'
-    var userName = "#{upload.uploader.channelName || upload.uploader.channelUrl}"
-
-    var unsubbing = alreadySubbed
-
-    // switch value of alreadySubbed
     if (alreadySubbed) {
       amountOfSubs = amountOfSubs - 1
       alreadySubbed = false;
@@ -45,37 +22,28 @@ script.
       alreadySubbed = true;
     }
 
-    // the user is unsubbing
-    if(unsubbing){
-      $('.subscribe').html(`Subscribe (${amountOfSubs})`)
-      // change from red to green
+    var userName = "#{channel.channelName || channel.channelUrl}"
 
-      console.log('unsubscribing');
+    if (!alreadySubbed) {
+      $('.subscribe').html(`Subscribe (${amountOfSubs})`)
+
       $('.subscribe').removeClass("btn-danger")
       $('.subscribe').addClass("btn-success")
 
-
-      // remove class, add class
-
-      swal({ text: 'You have unsubscribed from ' + userName })
+      swal('You have unsubscribed from ' + userName)
 
     } else {
-      console.log('subscribing')
+      $('.subscribe').html(`Subscribed (${amountOfSubs})`)
 
-      $('.subscribe').html(`Unsubscribe (${amountOfSubs})`)
       $('.subscribe').removeClass("btn-success")
       $('.subscribe').addClass("btn-danger")
-
-      // change from green to red
-      swal({ text: 'You have subscribed to ' + userName })
+      swal('You have subscribed to ' + userName )
     }
-
 
     //
     var data = {
       _csrf: csrf,
-      channelUrl,
-      uniqueTag : mediaUniqueTag
+      channelUrl
     }
 
     $.ajax({
