touchups and bugfixes

--- a/views/viewPartials/channelSubscribe.pug
+++ b/views/viewPartials/channelSubscribe.pug
@@ -33,7 +33,7 @@ script.
       swal('You have unsubscribed from ' + userName)
 
     } else {
-      $('.subscribe').html(`Subscribed (${amountOfSubs})`)
+      $('.subscribe').html(`Unsubscribe (${amountOfSubs})`)
 
       $('.subscribe').removeClass("btn-success")
       $('.subscribe').addClass("btn-danger")
