update landing page

--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -60,8 +60,8 @@ block content
 
   div.container(style="text-align:center")
 
-    h1.lead-header.fw Introducing #{brandName}
-    h2.tagline-header.fw An open-source YouTube alternative powered by Node.js
+    h1.lead-header.fw Welcome To #{brandName}
+    h2.tagline-header.fw The internet's best media hosting for creators and users
     hr
 
     .row.first-row
@@ -78,8 +78,8 @@ block content
       .col-sm-4
         h2.pitch-header.fw 100% Open Source &nbsp
           i.fa.fa-space-shuttle
-        p.explainer.fw Create your own #{brandName} instance
-        p.fw in just minutes following our tutorials
+        p.explainer.fw Decentralize the internet by creating
+        p.fw your own NewTube instance in just minutes
 
 
     .row.second-row
