--- a/views/media.pug
+++ b/views/media.pug
@@ -161,7 +161,9 @@ block content
                         h2 Upload Deleted
 
                     if upload.fileType == 'video' || upload.fileType == 'audio'
-                        p.fw.fileSizeText(style="margin-top:15px") File Size: #{ ( upload.fileSize/ ( 1000 * 1000)).toFixed() } MB
+
+                        // TODO: at some point we should not support upload.fileSize and move to upload.originalFileSizeInMb instead
+                        p.fw.fileSizeText(style="margin-top:15px") File Size: #{ Math.round(upload.processedFileSizeInMb) || ( upload.fileSize/ ( 1000 * 1000)).toFixed() } MB
 
                     if upload.category
                         each category in categories
