--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -12,11 +12,13 @@ footer
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://discord.gg/ejGah8H" target="_blank") Discord
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://twitter.com/nodetube_org" target="_blank") Twitter
-
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://riot.im/app/#/room/#nodetube:matrix.org" target="_blank") Riot.im
 
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://twitter.com/nodetube_org" target="_blank") Twitter
+
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/nodetube" target="_blank") Reddit
+
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://fosstodon.org/@nodetube" target="_blank") Fosstodon
 
     a.pull-left(style="color:#aaa;margin-right:10px;" href="/termsofservice") Terms Of Service
 
