--- a/views/media.pug
+++ b/views/media.pug
@@ -17,6 +17,8 @@ block content
             div(style="max-width:443px;margin:0 auto;")
                 h2.fw(id="processing") Your upload is currently 1% done being processed
 
+                p.fw(id="processingTimeLeft") Time to completion: calculating ...
+
                 h4.fw(style="font-size:22px;margin-top:30px;") If your upload is stuck on processing, let an admin know via the social links at the bottom of the page and we'll take a look.
 
 
