--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -1,9 +1,6 @@
 extends ../layout
 
 block content
-
-  //script(src='https://checkout.stripe.com/checkout.js')
-
   style.
     .stripe-button-el span {
       display: block;
@@ -140,9 +137,9 @@ block content
 
     // TODO: export a variable plus_enabled if user enables payments
     // TODO: has to have styled updated with fw
-    if plus_enabled
+    if process.env.PLUS_ENABLED == 'true'
       h2.fw.text-center(style="margin-bottom:16px") #{brandName} Plus
-      div.pt-plus.center-div.text-center
+      div.nt-plus.center-div.text-center
         if user.plan == 'plus'
           p Thank you so much for subscribing!
           p This area is currently being expanded
@@ -359,10 +356,7 @@ block content
             | Change Password
 
   script.
-
-
     //.delete-user-thumbnail-form
-
 
     // capture submit
     $('.update-user-details-form').submit(function (event) {
@@ -440,62 +434,64 @@ block content
       console.log(username, uploadToken)
 
       $('.livestream-button').on('click', function(){
-        swal('Please stream to rtmp://broadcast.pewtube.com/live/' + username  + '?key=' + uploadToken + ' \n\n You will be live at https://live.pewtube.com/User/' + username)
+        swal('Please stream to rtmp://broadcast.nodetube.live/live/' + username  + '?key=' + uploadToken + ' \n\n You will be live at https://live.nodetube.live/User/' + username)
       })
 
-  script.
-    var stripeToken = '#{stripeToken}'
 
-    var csrf = '#{_csrf}'
+  if process.env.PLUS_ENABLED == 'true'
+    script(src='https://checkout.stripe.com/checkout.js')
 
-    //var handler = StripeCheckout.configure({
-    //  key: stripeToken,
-    //  image: 'https://f001.backblazeb2.com/file/nodetube/nodetube/RCbutDM.jpg',
-    //  locale: 'auto',
-    //  // bitcoin: true,
-    //  token: function (token) {
-    //
-    //    var data = {
-    //      _csrf: csrf,
-    //      token
-    //    }
-    //
-    //    $.ajax({
-    //      type: 'POST',
-    //      url: `/api/purchase/plus`,
-    //      data,
-    //      success: function (data) {
-    //        if (data == 'success') {
-    //          window.location = "/account?to=pt-plus";
-    //        } else {
-    //          swal("Something didn't work, please contact NodeTube at ceo@nodetube.live or via the widget in the bottom right corner")
-    //        }
-    //        console.log(data);
-    //      },
-    //      error: function (err) {
-    //        console.log(err);
-    //      }
-    //    });
+    script.
+      var stripeToken = '#{stripeToken}'
 
+      var csrf = '#{_csrf}'
 
-    // TODO: Post this guy to the backend
-    //      }
-    //    });
-    document.getElementById('customButton').addEventListener('click', function (e) {
-      // Open Checkout with further options:
-      handler.open({
-        name: 'NodeTube, Inc.',
-        description: 'One Month Of NodeTube Plus',
-        amount: 495,
-        allowRememberMe: false
-        // email: "customer@email.com"
+      var handler = StripeCheckout.configure({
+        key: stripeToken,
+        image: 'https://newtube.app/images/full_size_logo.png',
+        locale: 'auto',
+        // bitcoin: true,
+        token: function (token) {
+
+          var data = {
+            _csrf: csrf,
+            token
+          }
+
+          $.ajax({
+            type: 'POST',
+            url: `/api/purchase/plus`,
+            data,
+            success: function (data) {
+              if (data == 'success') {
+                window.location = "/account?to=nt-plus";
+              } else {
+                swal("Something didn't work, please contact NodeTube at ceo@nodetube.live or via the widget in the bottom right corner")
+              }
+              console.log(data);
+            },
+            error: function (err) {
+              console.log(err);
+            }
+          });
+          }
+        });
+
+      document.getElementById('customButton').addEventListener('click', function (e) {
+        // Open Checkout with further options:
+        handler.open({
+          name: 'NodeTube, Inc.',
+          description: 'One Month Of NodeTube Plus',
+          amount: 495,
+          allowRememberMe: false
+          // email: "customer@email.com"
+        });
+        e.preventDefault();
       });
-      e.preventDefault();
-    });
-    // Close Checkout on page navigation:
-    window.addEventListener('popstate', function () {
-      handler.close();
-    });
+      // Close Checkout on page navigation:
+      window.addEventListener('popstate', function () {
+        handler.close();
+      });
 
 
 
