make error page smarter for missed user

--- a/views/error/404.pug
+++ b/views/error/404.pug
@@ -2,6 +2,6 @@ extends ../layout
 
 block content
     .container
-        h2.fw Sorry your content wasn't found!
+        h2.fw Sorry your #{ item || 'content'} wasn't found!
 
         h3.fw Please try again.
