Add time elapsed and total estimated time to upload + conversion

--- a/views/media.pug
+++ b/views/media.pug
@@ -17,7 +17,11 @@ block content
             div(style="max-width:443px;margin:0 auto;")
                 h2.fw(id="processing") Your upload is currently 1% done being processed
 
-                p.fw(id="processingTimeLeft") Estimated time to completion: calculating ...
+                p.fw(id="processingTimeElapsed") Time elapsed: calculating ...
+
+                p.fw(id="estimatedProcessingTimeLeft") Estimated time to completion: calculating ...
+
+                p.fw(id="estimatedTotalProcessingTime") Total estimated conversion time: calculating ...
 
                 h4.fw(style="font-size:22px;margin-top:30px;") If your upload is stuck on processing, let an admin know via the social links at the bottom of the page and we'll take a look.
 
