--- a/views/mediaPlayerPartials/progressTrackerJs.pug
+++ b/views/mediaPlayerPartials/progressTrackerJs.pug
@@ -13,27 +13,25 @@ script.
       channelUrl
     }
 
-    var estimatedProcessingTimeLeft = null;
-    var processingStartTime = null
+    var estimatedProcessingSecondsLeft = null;
 
     $.ajax({
       type: 'POST',
       url: `/user/${channelUrl}/${mediaUniqueTag}/progress`,
       data,
       success: function (data) {
-        console.log(data);
-        processingStartTime = !processingStartTime ? new Date() : null;
+        //- console.log(data);
 
-        estimatedProcessingTimeLeft = Number(data.conversionTimeLeft);
+        estimatedProcessingSecondsLeft = Number(data.conversionTimeLeft);
         setIntervalX(() => {
-          if (estimatedProcessingTimeLeft) estimatedProcessingTimeLeft -= 1
+          if (estimatedProcessingSecondsLeft) estimatedProcessingSecondsLeft -= 1
           var secondsToFormattedTime = #{secondsToFormattedTime};
 
           var secondsElapsed = processingStartTime ? Math.round((new Date() - processingStartTime) / 1000) : null;
 
           var formattedSecondsElapsed = secondsElapsed && secondsToFormattedTime(secondsElapsed)
-          var formattedEstimatedProcessingTimeLeft = estimatedProcessingTimeLeft && secondsToFormattedTime(estimatedProcessingTimeLeft)
-          var formattedEstimatedTotalProcessingTime = secondsToFormattedTime(estimatedProcessingTimeLeft + secondsElapsed)
+          var formattedEstimatedProcessingTimeLeft = estimatedProcessingSecondsLeft && secondsToFormattedTime(estimatedProcessingSecondsLeft)
+          var formattedEstimatedTotalProcessingTime = estimatedProcessingSecondsLeft && secondsToFormattedTime(estimatedProcessingSecondsLeft + secondsElapsed)
 
           $('#processingTimeElapsed').text(`Time elapsed: ${formattedSecondsElapsed ? formattedSecondsElapsed : "calculating ..."}`)
 
@@ -41,7 +39,7 @@ script.
 
           $('#estimatedTotalProcessingTime').text(`Total estimated conversion time: ${formattedEstimatedTotalProcessingTime ? formattedEstimatedTotalProcessingTime : "calculating ..."}`)
 
-        }, 1000 * 1, intervalSeconds - 1)
+        }, 1000 * 1, intervalSeconds)
 
         // Shows undefined when at 100%
         $('#processing').text(`Your upload is currently ${data.conversionProgress !== undefined ? data.conversionProgress : 100}% done being processed`);
@@ -57,6 +55,7 @@ script.
     });
   }
 
+  // Calls `callback` after `delay` milliseconds. This repeats `repetitions` number of times.
   function setIntervalX(callback, delay, repetitions) {
     var x = 0;
     var intervalId = window.setInterval(function () {
@@ -68,6 +67,8 @@ script.
         }
     }, delay);
   }
+
+  var processingStartTime = new Date();
 
   var userIsOnNgrokDomain = new URL(document.URL).hostname.slice(-8) === "ngrok.io";
 
